--- a/src/main/resources/shops/mob-drops.yml
+++ b/src/main/resources/shops/mob-drops.yml
@@ -30,7 +30,7 @@ items:
     slot: 10
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -41,7 +41,7 @@ items:
     slot: 11
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -52,7 +52,7 @@ items:
     slot: 12
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -63,7 +63,7 @@ items:
     slot: 13
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -74,7 +74,7 @@ items:
     slot: 14
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -85,7 +85,7 @@ items:
     slot: 15
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -96,7 +96,7 @@ items:
     slot: 16
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -107,7 +107,7 @@ items:
     slot: 19
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -118,7 +118,7 @@ items:
     slot: 20
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -129,7 +129,7 @@ items:
     slot: 21
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
@@ -140,7 +140,7 @@ items:
     slot: 22
     page: 0
     lore:
-      - "<#BDBDBD>Sell Price: <#e42121>${sell_price}"
+      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
       - ""
       - "<#e42121>✔ Right-Click to Sell"
     buy-price: -1
