--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.bumpier</groupId>
     <artifactId>bShop</artifactId>
-    <version>1.1.0-SNAPSHOP</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <name>bShop</name>
